updates late september 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -375,6 +375,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Own Institution}
 \noindent
 
+\years{2018c} \textsc{Lightning Talk Speaker}. (September 28, 2018). “Challenges and Opportunities of Collaborative Music Live Coding: A Practitioner's Approach". \emph{The Raw and The Cooked, Inter/sections 2018}. Café 1001, London, UK.\\
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2017b} \textsc{Oral Presenter}. (June 19, 2017). “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". \emph{CCW2017: Co-Creation Workshop, ICC 2017}. Atlanta, GA, USA.\\
@@ -478,7 +479,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Performances}
 \noindent
 
-
+\years{2008c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
 \years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. \textsc{Imaginary Berlin}. WAC '18. Factory Berlin. Berlin, Germany.\\  
 \years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
 \years{2017}\textbf{peterMann}. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
@@ -690,12 +691,13 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Professional Organization Member}
 \noindent
 \emph{Association for Computing Machinery (ACM)}.\\
-\emph{International Computer Music Association (ICMA)}.\\
+\emph{International Computer Music Association (ICMA)}.
 
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
-\years{2019}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
+\years{2019b}\textsc{Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
+\years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
 \years{2018}\textsc{Programme Committee Member}. \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017c}\textsc{Session Chair}. \emph{Web Audio Conference 2017}. London.\\
 \years{2017b}\textsc{Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
