updates mid october 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -585,10 +585,10 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \noindent
 
 \years{10/2018}Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$17. \\
+Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Course: \emph{Physical Computing} (32 h). \# Students: $\sim$17. \\
+Course: \emph{Physical Computing} (28 h). \# Students: $\sim$15. \\
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
 
@@ -740,7 +740,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Panelist}
 \noindent
 
-%\years{2018c}(November 15, 2018). Resonate Music Conference 2018. Glasgow, Scotland.\\
+%\years{2018d}(November 15, 2018). Resonate Music Conference 2018. Glasgow, Scotland.\\
+\years{2018c}(October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
 \years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 \years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
 
@@ -772,7 +773,8 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
 \noindent
-\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
+\years{08/2018--present}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
+Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels.\\\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
 Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
 Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
