updates late October

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -106,7 +106,8 @@ NTNU (Norwegian University of Science and Technology)\\
 
 %%\hrule
 \section*{Current Position}
-\emph{Associate Professor in Music Technology}, Department of Music, Norwegian University of Science and Technology (NTNU).
+\emph{Associate Professor in Music Technology}, Department of Music, Norwegian University of Science and Technology (NTNU).\\
+\emph{Visiting Lecturer}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London.
 
 %%\hrule
 \section*{Areas of Interest}
