--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -101,13 +101,9 @@ NTNU (Norwegian University of Science and Technology)\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
 %%\hrule
-%\section*{Current Position}
-%\emph{Postdoctoral Research Assistant}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London (QMUL).
-
-%%\hrule
 \section*{Current Position}
 \emph{Associate Professor in Music Technology}, Department of Music, Norwegian University of Science and Technology (NTNU).\\
-\emph{Visiting Lecturer}, Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London.
+\emph{Visiting Lecturer}, Centre for Digital Music (C4DM), School of Electronic Engineering and Computer Science (EECS), Queen Mary University of London (QMUL).
 
 %%\hrule
 \section*{Areas of Interest}
@@ -152,16 +148,17 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
+\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Instructors: Emma Kennedy, Alison Gilmour, Maren Thom. QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
-\years{2018}\textsc{Learning and Teaching in Higher Education}. Instructor: Emma Kennedy. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
 %%\hrule
 \section*{Employment}
 \noindent
-\years{08/2018--present}\textsc{Associate Professor in Music Technology}. Department of Music, Norwegian University of Science and Technology (NTNU). \\
-\years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. Centre for Digital Music, School of Electronic Engineering and Computer Science, Queen Mary University of London. \\
-\years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology | Digital Media Program, Georgia Tech. \\
+\years{08/2018--present}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
+\years{08/2018--present}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
+\years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
+\years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
 \years{02/2004--06/2010}\textsc{Co-Founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
@@ -380,9 +377,9 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2018b} \textsc{Oral Presenter}. (August 13, 2018). “Women in Music Tech: A Case Study". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2018a} \textsc{Oral Presenter}. (August 13, 2018). “A Journey Through My Research and Creative Practice". \emph{Oppstartseminar (Institutt for musikk)}. Dokkhuset, Trondheim, Norway.\\
 \years{2017b} \textsc{Oral Presenter}. (June 19, 2017). “Computational Challenges of Co-creation in Collaborative Music Live Coding: An Outline". \emph{CCW2017: Co-Creation Workshop, ICC 2017}. Atlanta, GA, USA.\\
-\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech, Atlanta, GA, USA.\\
+\years{2017a} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). “Women in Music Tech 2016--2017". Oral presentation and discussion. \emph{GTCMT}, Geogia Tech, Atlanta, GA, USA.\\
 \years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). “Tangible User Interfaces and Tabletops". \emph{First Annual Women and Music Tech Concert and Reception}, The Garage, Atlanta, GA. USA.\\
-\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech, Atlanta, GA, USA.\\
+\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). “Women in Sound." Oral presentation and discussion. \emph{GTCMT}, Geogia Tech, Atlanta, GA, USA.\\
 \years{2016b} \textsc{Oral Presenter}. (February 25, 2016). “Algorithmic Composition: My Personal Journey". Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT, Atlanta, GA, USA.\\
 \years{2016a} \textsc{Oral Presenter}. (January 26, 2016). “EarSketch: Computational Music Remixing for All". Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech, Atlanta, GA, USA.\\
 \years{2015c} \textsc{Oral Presenter}. (September 3, 2015). “Musical Tabletops: Challenges and Opportunities for Computer-Supported Collaborative Music and HCI". \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
@@ -585,73 +582,96 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
-\years{10/2018}Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2018}Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
-Course: \emph{Physical Computing} (28 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{Physical Computing} (28 h). \# Students: $\sim$15. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
 
 \subsection*{Undergraduate Courses}
 \noindent
 
-\years{02/2004--06/2004}Centre de la Imatge i la Technologia Multimèdia, Universitat Politècnica de Catalunya, Terrassa, Barcelona.\\ 
-Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
+\years{02/2004--06/2004}Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
+Centre de la Imatge i la Technologia Multimèdia, Universitat Politècnica de Catalunya, Terrassa, Barcelona.\\ 
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2003--02/2004}BAU Escola de Disseny, Universitat de Vic, Barcelona.\\ 
-Course: \emph{Crossmedia} (45 h). \# Students: $\sim$15. \\
+\years{10/2003--02/2004}Course: \emph{Crossmedia} (45 h). \# Students: $\sim$15. \\
+BAU Escola de Disseny, Universitat de Vic, Barcelona.\\ 
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
-\years{11/2003--06/2004}Media Art Institute Fak d'Art, Barcelona.\\ 
+\years{11/2003--06/2004}
 Course: \emph{Digital Compositing with Adobe AfterEffects} (45 h). \# Students: $\sim$10. \\ 
+Media Art Institute Fak d'Art, Barcelona.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
+\years{11/2003--06/2004}
 Course: \emph{Photography in Motion} (45 h). \# Students: $\sim$10. \\ 
+Media Art Institute Fak d'Art, Barcelona.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
+\years{11/2003--06/2004}
 Course: \emph{Type in Motion} (45 h). \# Students: $\sim$10.\\
+Media Art Institute Fak d'Art, Barcelona.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{11/1999--06/2003}Media Art Institute Fak d'Art, Barcelona.\\ 
+\years{11/1999--06/2003}
 Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
+Media Art Institute Fak d'Art, Barcelona.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Professional Courses}
 \noindent
 
-\years{04/2004--05/2005}Crea Formación, Barcelona.\\
+\years{04/2004--05/2005}
 Course: \emph{Usability} (12 h). \# Students: $\sim$5.\\ 
+Crea Formación, Barcelona.\\
 Role: Instruction.\\
+\years{04/2004--05/2005}
 Course: \emph{Internet Design Techniques} (12 h). \# Students: $\sim$5.\\ 
+Crea Formación, Barcelona.\\
 Role: Instruction.\\
+\years{04/2004--05/2005}
 Course: \emph{Web Design with DreamWeaver} (24 h). \# Students: $\sim$5.\\
+Crea Formación, Barcelona.\\
 Role: Instruction.\\ 
+\years{04/2004--05/2005}
 Course: \emph{Multimedia Content with Adobe Flash} (16 h). \# Students: $\sim$5. \\
+Crea Formación, Barcelona.\\
 Role: Instruction.\\
+\years{04/2004--05/2005}
 Course: \emph{Flash Programming} (20 h) \# Students: $\sim$5.\\ 
+Crea Formación, Barcelona.\\
 Role: Instruction.\\
+\years{04/2004--05/2005}
 Course: \emph{Theoretical Aspects in Graphic Design} (12 h). \# Students: $\sim$5.\\ 
+Crea Formación, Barcelona.\\
 Role: Instruction.\\
+\years{04/2004--05/2005}
 Course: \emph{Video Edition with Adobe Premiere} (60 h) \# Students: 1.\\
+Crea Formación, Barcelona.\\
 Role: Creation of syllabus, creation of content and instruction.
 
 \subsection*{Preschool \& Primary School Courses}
 \noindent
 
-\years{03/2004--06/2004}Escola Magòria, Barcelona.\\
+\years{03/2004--06/2004}
 Course: \emph{Crossmedia infantil} (11 h). \# Students (6--7 years old): $\sim$8.\\
+Escola Magòria, Barcelona.\\
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
-\years{03/2004--05/2004}Escola Costa i Llobera, Barcelona.\\ 
+\years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (9 h). \# Students (9--10 years old): $\sim$15.\\
+Escola Costa i Llobera, Barcelona.\\ 
 Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
-\years{03/2004--05/2004}Escola Glòries, Barcelona.\\
+\years{03/2004--05/2004}
 Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
+Escola Glòries, Barcelona.\\
 Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
-\section*{Mentoring}
+\section*{Supervision}
 \noindent
 
-\years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons.\\
+\years{11/2018--present}Appraisal Committee Member for Hilmar Thordarson, Norwegian Programme for Artistic Research, Norwegian Science and Technology University, Trondheim, Norway.\\
+\years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons. Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
 \years{05/2016--12/2017}Mentor and advisor the female graduate students of the student-led organization \emph{Women in Music Tech}, including the Chair of the organization, Léa Ikkache, the Editor-in-Chief of the newsletter Amruta Vidwans and female newcomers to the organization, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
-\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
 
 \section*{Additional Experience}
 \noindent
@@ -670,9 +690,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Blogging}
 \noindent
 
-\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Coordinator, Reviewer and Author.\\ 
+\years{09/2018--present}\href{http://wonomute.no}{Women Nordic Music Technology}, the blog of the WoNoMute organization. Creator and Coordinator.\\ 
+\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Coordinator.\\ 
 \years{05/2017--present}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Editor-in-Chief, Reviewer and Author.\\ 
-\years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Author.\\ 
+\years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Creator and Author.\\ 
 \years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Editor, Reviewer and Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Author. \\ 
 \years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Author.\\
@@ -711,17 +732,17 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Conference Reviewer}
 \noindent
 
-\years{2018h}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
-\years{2018g}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018f}\emph{International Society for Music Information Retrieval Conference} (2018).\\
+\years{2018i}\emph{ACM special interest group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
+\years{2018h}\emph{International Conference of the Learning Sciences} (2018).\\
+\years{2018g}\emph{International Society for Music Information Retrieval Conference} (2018).\\
 \years{2017h}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017g}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017f}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
-\years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017e, 2018e).\\
+\years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017e, 2018f).\\
 \years{2016g}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016f}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2018}\emph{Web Audio Conference} (2016e, 2017d, 2018d).\\
-\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015c, 2016d, 2017c).\\
+\years{2016--2018}\emph{Web Audio Conference} (2016e, 2017d, 2018e).\\
+\years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015c, 2016d, 2017c, 2018d).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012c, 2016c, 2018c).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012b, 2013b, 2014b, 2015b, 2016b, 2017b, 2018b).\\
@@ -730,6 +751,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2018d}\emph{PLOS One}. Public Library of Science.\\
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2018b}\emph{Journal of New Music Research}. ScholarOne Manuscripts.\\
 \years{2018a}\emph{Transactions on Computing Education}. ACM.\\
