updates mid November 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -489,7 +489,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
-%\years{2017e}Brown, N., Stolfi, A., Schroeder, F., Chudy, M., Pase, T., Wilkie, S., \textbf{Xambó, A.}, Ikkache, L., Weisling, A. (submitted). “Transmusicking II". \\
+\years{2018c}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
 \years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
 \years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., \textbf{Xambó, A.}, Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Tsuchiya, T. (August 25, 2017). “Transmusicking I". \emph{AM '17}. Oxford House Theatre. London, UK. \\
@@ -762,8 +762,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Panelist}
 \noindent
-
-%\years{2018d}(November 15, 2018). Resonate Music Conference 2018. Glasgow, Scotland.\\
+\years{2018e}(November 21, 2018). Panel: Women in Music Technology around the World with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+\years{2018d}(November 15, 2018). Panel: Future of the Music Industries with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, Associate Professor Music Technology at NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
 \years{2018c}(October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
 \years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 \years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
