updates early December 2018

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -137,7 +137,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{1982--1988}\textsc{Music Theory \& Solfege}, Conservatori Superior de Música del Liceu, Barcelona.
 \noindent
 \subsection*{Workshops}
-\years{Forthcoming}\textsc{Spatial Audio Workshop} by Eric Lyon. Virginia Tech, Blacksburg, Virginia, USA.\\
+\years{2018}\textsc{Spatial Audio Workshop} by Eric Lyon. Virginia Tech, Blacksburg, Virginia, USA.\\
 \years{2014}\textsc{Taller composición acusmática} (Acousmatic Composition Workshop) by Beatriz Ferreyra. Barcelona.\\
 \years{2012}\textsc{Síntesi no estàndard: tècniques, estètiques, extensions} (Non-Standard Synthesis: Techniques, Aesthetics, Extensions) by Luc Döbereiner. Barcelona.\\
 \years{2009}\textsc{Taller construeix el teu propi sintetitzador} (Build Your Own Synthesizer Workshop) by Tom Bugs. Barcelona.\\
@@ -148,7 +148,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Teaching Education}
 \noindent
-\years{2018--present}\textsc{Learning and Teaching in Higher Education}. Instructors: Emma Kennedy, Alison Gilmour, Maren Thom. QMUL. London.\\
+\years{2018--present}\textsc{Learning and Teaching in Higher Education (module II)}. Instructors: Alison Gilmour, Maren Thom. QMUL. London.\\
+\years{2018--present}\textsc{Learning and Teaching in Higher Education (module I)}. Instructors: Emma Kennedy. QMUL. London.\\
 \years{2018}\textsc{Women into Leadership}. Instructor: Lorraine Smith. QMUL. London.\\
 \years{2017}\textsc{Communication Skills for Teaching for International Faculty, Postdocs, and Visiting Scholars}. Instructor: Katherine Samford. Georgia Institute of Technology (Georgia Tech). Atlanta, GA, USA.
 
@@ -223,17 +224,17 @@ Total Fundraised British Pound Amount: \textsterling2,000\\[.1cm]
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization. \\
 Total Fundraised Dollar Amount: \$11,450\\[.1cm]
-\years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
+\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,500\\[.1cm]
-\years{08/2016--11/2016}\textbf{Fall 2016 Concert Event}\\
+\years{08/2016--11/2016}\emph{Fall 2016 Concert Event}\\
 Funding body: College of Design, Georgia Tech. \\
 Total Dollar Amount: \$2,000\\[.1cm]
 Funding body: ADVANCE program, Georgia Tech. \\
 Total Dollar Amount: \$1,000\\[.1cm]
 Funding body: Women's Resource Center, Georgia Tech. \\
 Total Dollar Amount: \$250\\[.1cm]
-\years{01/2017--05/2017}\textbf{Spring 2017 Actions}\\
+\years{01/2017--05/2017}\emph{Spring 2017 Actions}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,400\\[.1cm]
 Funding body: College of Design Council Diversity, Georgia Tech. \\
@@ -309,7 +310,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2017b}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2017) “Loop-aware Audio Recording for the Web". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London\\ 
 \years{2017a}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and Ownership with a Tangible Computational Music Installation for Informal Learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to Broaden Participation in Computing and Music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
-\years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
+\years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and New Directions for Collaborative Live Coding in the Classroom". In \emph{Proceedings of the International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 65--73.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: Supporting Tabletop Collaboration and Awareness with Ambisonics Spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
 \years{2013}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “A Content-based System for Music Recommendation and Visualization of User Preferences Working on Semantic Notions". In \emph{IEEE 9th International Workshop on Content-Based Multimedia Indexing (CBMI '13)}. Madrid. pp. 249--252.\\
 \years{2012}Roma, G., \textbf{Xambó, A.}, Herrera, P. and Laney, R. (2012). “Factors in human recognition of timbre lexicons generated by data clustering". In \emph{Proceedings of the 9th Sound and Music Computing Conference (SMC 2012)}. Copenhagen, Denmark. pp. 23--30.\\
@@ -327,7 +328,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2017a}\textbf{Xambó, A.}, Roma, G. (2017). “Hyperconnected Action Painting". In \emph{Proceedings of the Web Audio Conference 2017 (WAC '17)}. London.\\
 \years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven Musical Language to Live Coding: A Case Study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
 \years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to Code Through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
-\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
+\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK. pp. 315--316.\\
 \years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: A STEAM Approach to Broadening Participation in Computer Science Principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
 \years{2014}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an Integrated Methodological Framework for Understanding Embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.
 
@@ -477,6 +478,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Performances}
 \noindent
 
+\years{2008d}\textbf{Xambó, A.} (November 24, 2018). A session on participatory mobile music and live coding using crowdsourced sounds. NTNU Research Concert. \emph{Dokkhuset}. Trondheim, Norway.\\
 \years{2008c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
 \years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. \textsc{Imaginary Berlin}. WAC '18. Factory Berlin. Berlin, Germany.\\  
 \years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
