updates early January 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -422,6 +422,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Workshops}
 \noindent
 
+\years{2019} Allik, A., \textbf{Xambó, A.} (January 16, 2019). “Musical Networks of Live Coders". \emph{International Conference on Live Coding 2019}, Medialab Prado, Madrid, Spain. \\
 \years{2018b} \textbf{Xambó, A.} (July 12--13, 2018). “Creative Audio Programming". \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany. Organized by MA Creative Technologies.\\
 \years{2018a} Allik, A., \textbf{Xambó, A.} (April 7--8, 2018). “Collaborative Network Music". \emph{Rewire 2018}, The Hague, The Netherlands. Organized by Music Hackspace. Funded by Rewire.\\
 \years{2017} \textbf{Xambó, A.} (October 14, 2017). “Huddersfield Girl Geeks: Audiovisual Creative Coding with P5.js". \emph{Kirklees Libraries}, Huddersfield, UK. Funded by Google.\\
@@ -443,9 +444,10 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
-\subsection*{Band Albums}
+\subsection*{Group Albums}
 \noindent
 
+\years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} [EP]. Barcelona: Carpal Tunnel.\\
 \years{1996}La Más Fina. \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
 \years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
 \years{1992}Sosa's Cáustica. \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
@@ -478,8 +480,9 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Solo Performances}
 \noindent
 
-\years{2008d}\textbf{Xambó, A.} (November 24, 2018). A session on participatory mobile music and live coding using crowdsourced sounds. NTNU Research Concert. \emph{Dokkhuset}. Trondheim, Norway.\\
-\years{2008c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
+\years{2019}\textbf{Xambó, A.} (January 18, 2019). \emph{Live coding with crowdsourced sounds \& a drum machine}. International Conference on Live Coding, Medialab Prado, Madrid, Spain.\\
+\years{2018d}\textbf{Xambó, A.} (November 24, 2018). \emph{A session on participatory mobile music and live coding using crowdsourced sounds}. NTNU Research Concert. Dokkhuset. Trondheim, Norway.\\
+\years{2018c}\textbf{peterMann.} (September 28, 2018). Live coding session. \emph{The Raw, Inter/sections 2018. Café 1001}. London, UK.\\
 \years{2018b}\textbf{Xambó, A.} (September 19, 2018). Audience device participation piece. \textsc{Imaginary Berlin}. WAC '18. Factory Berlin. Berlin, Germany.\\  
 \years{2018a}\textbf{Xambó, A.} (August 9, 2018). Live. \textsc{MareNostrum}. Cube Fest. Moss Arts Center. Blacksburg, VA, USA.\\
 \years{2017}\textbf{peterMann}. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
@@ -584,6 +587,12 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
+\years{1/2019}Course: \emph{Sonification and Sound Design} (58 h). \# Students: $\sim$15. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
+Role: Creation of syllabus, creation of content, instruction, coordination of guest lectures, and assessment.\\
+\years{1/2019}Course: \emph{Audio Programming} (58 h). \# Students: $\sim$15. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2018}Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
@@ -764,8 +773,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Panelist}
 \noindent
-\years{2018e}(November 21, 2018). Panel: Women in Music Technology around the World with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
-\years{2018d}(November 15, 2018). Panel: Future of the Music Industries with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, Associate Professor Music Technology at NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
+\years{2018e}(November 21, 2018). \emph{Panel: Women in Music Technology around the World} with Nela Brown (FLO), Magdalena Chudy (FLO), Liz Dobson (YSWN), Ada Mathea Hoel (WoNoMute), Léa Ikkache (WiMT), Tuna Pase (FLO), Franziska Schroeder (FLO), Ariane Stolfi, (Sonora) Sonia Wilkie (FLO) and Anna Xambó (WoNoMute, WiMT). Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
+\years{2018d}(November 15, 2018). \emph{Panel: Future of the Music Industries} with Joe Lyske (chair, MXX), Jesper Skibsby (panelist, WARM), Nick Breen (panelist, Reed Smith) and Anna Xambó (panelist, NTNU). Resonate Music Conference 2018. Barras Art and Design (BAAD), Glasgow, Scotland, UK.\\
 \years{2018c}(October 26, 2018). \emph{Panel Session 3: Equality, Diversity, Gender} with Thomas Hilder (chair), Jill Diana Halstead Hjørnevik (panelist), Sunniva Skjøstad Hovde (panelist), Vivian Anette Lagesen (panelist), and Anna Xambó (panelist). Knowing Music -- Musical Knowing: Cross disciplinary dialogue on epistemologies. International Music Research School 2018, NTNU. Dokkhuset, Trondheim, Norway.\\
 \years{2018b}(July 4, 2018) \emph{The Disturbing Discussion about Innovation} with Nicolas d'Alessandro (panelist), Tom Mitchell (panelist), Anna Xambó (panelist), and Matthias Strobel (moderator). Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 \years{2018a}(June 6, 2018) \emph{Future, Democratization, and Globalization of NIMEs} with Onyx Ashanti (panelist), Peter Nyboer (panelist), Anna Xambó (panelist), Pamela Z (panelist) and R. Benjamin Knapp (moderator). NIME '18. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.
@@ -799,14 +808,15 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 \subsection*{Entrepreneurship}
 \noindent
 \years{08/2018--present}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
-Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels.\\\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
+Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the organization of a monthly seminar series of talks, the creation of an online archive and generation of related online content to give more visibility to the work of women in music tech.
+\\\years{05/2016--12/2017}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
 Co-Founder and Co-Chair of \emph{Women in Music Tech}, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
 Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
 
 \subsection*{Research Visits}
 
-\years{07/2017}Filmuniversität Babelsberg KONRAD WOLF, Potsdam, Germany.\\
+\years{07/2018}Filmuniversität Babelsberg KONRAD WOLF, Potsdam, Germany.\\
 \years{05/2012}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{06/2011}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{04/2011--05/2011} UPF, Barcelona, Spain.\\
